# sqlfluff-language-server

./: .gitignore  .npmignore  README.md  esbuild.js  package.json  pyproject.toml
coc/: index.ts
sqlfluff_language_server/: __main__.py  server.py
tests/: test_sqlfluff_language_server.py
